Fix overflow on zoom out mode pattern inserter

--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -330,7 +330,6 @@ $block-inserter-tabs-height: 44px;
 	@include break-medium {
 		padding: 0;
 		left: 100%;
-		display: block;
 		width: 300px;
 	}
 
